--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -1,13 +1,10 @@
 ---
 layout: archive
-permalink: /year-archive/
-title: "Blog posts"
-author_profile: true
-redirect_from:
-  - /wordpress/blog-posts/
+permalink: /posts/
+title: "Posts"
 ---
 
-{% include base_path %}
+<!-- {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
@@ -16,4 +13,4 @@ redirect_from:
     {% capture written_year %}{{ year }}{% endcapture %}
   {% endif %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
